--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,9 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/css/uikit.min.css" />
+  <!-- <link rel="stylesheet" href="./uikit-3.4.6/css/uikit.min.css" />
+  <script src="./uikit-3.4.6/js/uikit.min.js"></script>
+  <script src="./uikit-3.4.6/js/uikit-icons.min.js"></script> -->
   
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -40,8 +42,7 @@
     -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit-icons.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit-icons.min.js"></script>
+  
 </body>
 
 </html>
