added in font oswald to text-center

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="./uikit-3.4.6/css/uikit.min.css" />
   <script src="./uikit-3.4.6/js/uikit.min.js"></script>
   <script src="./uikit-3.4.6/js/uikit-icons.min.js"></script> -->
